--- a/views/viewPartials/uploadThumbnail.pug
+++ b/views/viewPartials/uploadThumbnail.pug
@@ -10,16 +10,13 @@ style.
 div.holder(style="border:")
     a.title-anchor(href=`/user/${upload.uploader.channelUrl || channelUrl}/${upload.uniqueTag}` style="color:#7d7373;" )
         div.image-container(style="")
-            if upload.thumbnails && upload.thumbnails.custom
-                img.upload-thumbnail.preview-image(src=`${uploadServer}/${channelUrl || upload.uploader.channelUrl}/${upload.thumbnails.custom}` style="")
 
-            else if upload.fileType == 'video' && upload.thumbnails && upload.thumbnails.generated
-                
+            if upload.fileType == 'video'
                 if !upload.lastWatchedTime
                     img.upload-thumbnail.preview-image(src=`${uploadServer}/${channelUrl || upload.uploader.channelUrl}/${upload.thumbnails.generated}` style="margin-bottom: -1.5%; height: 220px; max-height: 220px")
                 else
                     img.upload-thumbnail.preview-image(src=`${uploadServer}/${channelUrl || upload.uploader.channelUrl}/${upload.thumbnails.generated}` style="margin-bottom: -1.5%")
-                    progress(value=upload.lastWatchedTime max=upload.durationInSeconds)  
+                    progress(value=upload.lastWatchedTime max=upload.durationInSeconds)
             else if upload.fileType == 'video' && upload.thumbnails && upload.thumbnails.medium
                 img.upload-thumbnail.preview-image(src=`${uploadServer}/${channelUrl || upload.uploader.channelUrl}/${upload.thumbnails.medium}` style="")
 
