bugfix and improve admin actions

--- a/views/admin/adminAudit.pug
+++ b/views/admin/adminAudit.pug
@@ -1,7 +1,7 @@
 extends ../layout
 
 block content
-    div
+    div(style="margin-left:30px")
         div
             h2
             h2.view-header Admin Actions
