show amount of pending uploads

--- a/views/moderator/pending.pug
+++ b/views/moderator/pending.pug
@@ -4,7 +4,7 @@ block content
     div
         div
             h2
-            h2.view-header Pending Uploads
+            h2.view-header.fw(style="margin-left:20px") Pending Uploads (#{uploads.length})
         hr
         each upload in uploads
             div.col-sm-4(style="text-align:center;height:500px;")
