bugix navigation bug

--- a/views/viewPartials/channelOverviewPagination.pug
+++ b/views/viewPartials/channelOverviewPagination.pug
@@ -8,4 +8,4 @@ nav.center-block.text-center(aria-label='Page navigation example')
                 a.page-link(href=`/user/${channel.channelUrl}?page=${number}&orderBy=${orderBy}&mediaType=${media}&nav=true`) #{number}
 
         li.page-item
-            a.page-link(href=`user/${channel.channelUrl}?page=${nextNumber}&orderBy=${orderBy}&mediaType=${media}&nav=true`) >
+            a.page-link(href=`/user/${channel.channelUrl}?page=${nextNumber}&orderBy=${orderBy}&mediaType=${media}&nav=true`) >
