--- a/views/mediaBrowsing/recentUploads.pug
+++ b/views/mediaBrowsing/recentUploads.pug
@@ -40,7 +40,7 @@ block content
             br
 
         hr
-        div.uploads.container
+        div.uploads
             if !isACategory || category == 'overview'
                 include ../viewPartials/categoryOverviews
 
