bugfix for recent uploads

--- a/views/mediaBrowsing/recentUploads.pug
+++ b/views/mediaBrowsing/recentUploads.pug
@@ -60,7 +60,7 @@ block content
 
         include ../viewPartials/adminSensitivityButtons
 
-        div.col-sm-12
+        div.col-sm-12(style="display:inline")
             include ../viewPartials/pagination
 
 
