--- a/views/viewPartials/pagination.pug
+++ b/views/viewPartials/pagination.pug
@@ -1,4 +1,4 @@
-nav.center-block.text-center(aria-label='Page navigation example')
+nav.center-block.text-center(aria-label='Page navigation example' style="display:inline")
     ul.pagination
         li.page-item
             a.page-link(href=`/media/recent/${previousNumber}?media=${media}&category${category}&page=`) <
