--- a/views/mediaPlayerPartials/plyrAndAutoplayFunctionalityJs.pug
+++ b/views/mediaPlayerPartials/plyrAndAutoplayFunctionalityJs.pug
@@ -110,8 +110,23 @@ script.
     controls: ['play-large', 'play', 'progress', 'current-time', 'duration', 'rewind', 'fast-forward', 'mute', 'volume', 'settings', 'pip', 'fullscreen', 'captions'],
     settings: ['speed', 'captions', 'quality', 'loop'],
     fullscreen: {iosNative: true},
-    seekTime
+    seekTime,
+    previewThumbnails: {
+      enabled: true,
+      src: [`/uploads/#{upload.uploader.channelUrl}/#{upload.uniqueTag}_sprite.vtt`],
+    },
   };
+
+  // TODO: add sprite
+  // if (#{upload.hasPreviewSpriteThumbnail}) {
+  //
+  //   let previewThumbnails = {
+  //     enabled: true,
+  //     src: ['/uploads/anthony/newVideoTrimmed.vtt'],
+  //   }
+  //
+  //   plyr_options.previewThumbnails = previewThumbnails;
+  // }
 
   // Create the plyr instances - this defines players[0] as our primary player.
   var players = Plyr.setup("#media_player", plyr_options);
