almost done just a couple more things to do

--- a/views/widgets/zopim.pug
+++ b/views/widgets/zopim.pug
@@ -5,7 +5,7 @@ script.
   setTimeout(function(){
     // TODO: thing here
     $zopim(function () {
-      $zopim.livechat.window.hide();
+      // $zopim.livechat.window.hide();
     });
   }, 2000)
 //End of  Zendesk Widget script
