--- a/views/account/channel.pug
+++ b/views/account/channel.pug
@@ -77,7 +77,7 @@ block content
             div.col-sm-4(style="margin:0 auto;text-align:center;")
                 h2.fw #{channel.channelName || channel.channelUrl}
                     if channel.verified == true
-                        img(src="/images/verified.jpg" width="25px" height="25px" style="margin-left:3px;margin-top:-2px;margin-right:5px;")
+                        img(src="/images/verified.jpg" width="25px" height="25px" style="margin-left:3px;margin-top:-2px;margin-right:5px;border-radius:20px;")
                     if channel.plan == 'plus'
                         span.nodetube-pro PLUS
 
