--- a/views/viewPartials/uploadDetails.pug
+++ b/views/viewPartials/uploadDetails.pug
@@ -13,46 +13,6 @@ style.
         text-decoration:underline;
     }
 
-    .durationTime {
-        color: #959595;
-        font-family:initial;
-    }
-
-
-div.underThing
-    // all the details including title
-    if ( upload.fileType == 'audio' || upload.fileType == 'video') && upload.formattedDuration
-        div.duration(style="display:inline;height:26px;max-width:70px;text-align:center;position:relative;bottom:0;right:0;opacity:1;margin: 0 auto;border-radius: 5px")
-            span.durationTime(style="margin-right:7px;font-size:15px;") #{upload.formattedDuration}
-
-
-    // list file type
-    if upload.fileType == 'video'
-        i.fa.fa-video-camera(aria-hidden='true' style="margin:0 auto;text-align:center;display:inline;")
-    else if upload.fileType == 'audio'
-        i.fa.fa-volume-up(aria-hidden='true' style="margin:0 auto;text-align:center;display:inline;")
-    else if upload.fileType == 'image'
-        i.fa.fa-picture-o(aria-hidden='true' style="margin:0 auto;text-align:center;display:inline;")
-
-    // list visibilities
-    if upload.visibility == 'unlisted'
-        i.fas.fa-eye-slash(aria-hidden='true' style="margin:0 auto;text-align:center;display:inline;margin-left:8px;")
-    if upload.visibility === 'private'
-        i.fas.fa-lock(aria-hidden='true' style="margin:0 auto;text-align:center;display:inline;margin-left:8px;")
-    if upload.visibility === 'pending'
-        i.fas.fa-clock(aria-hidden='true' style="margin:0 auto;text-align:center;display:inline;margin-left:8px;")
-
-    // sensitivity (rating)
-    if upload.rating === 'mature'
-        i.fas.fa-exclamation-triangle(aria-hidden='true' style="margin:0 auto;text-align:center;display:inline;margin-left:8px;")
-    if upload.rating === 'sensitive'
-        i.fas.fa-radiation-alt(aria-hidden='true' style="margin:0 auto;text-align:center;display:inline;margin-left:8px;")
-
-
-
-    //i.fas.fa-eye(aria-hidden='true' style="margin:0 auto;text-align:center;display:inline;margin-left:8px;")
-
-
 // UPLOAD TITLE
 a.title-anchor(href=`/user/${upload.uploader.channelUrl || channelUrl}/${upload.uniqueTag}` style="color:#7d7373;" target="_parent")
     div
@@ -85,28 +45,26 @@ div.upload-thing
         p.upload-title-text.views-text(style="margin-top:-8px;color:#b0aeae;;") #{abbreviateNumber(upload[popularTimeViews])} #{withinDisplayString}
 
 
-
-
 //// if user is an admin, allow them to see category and rating
-if user && user.role == 'admin'
+if user && user.role === 'admin'
     div.admin-div(style="margin-bottom:15px;margin-top:-4px;")
         if upload.category
             p.upload-title-text.views-text(style="margin:0;margin-left:3px;text-align:center;display:inline;") #{upload.category}
         if upload.subcategory
             p.upload-title-text.views-text(style="margin:0;margin-left:3px;text-align:center;display:inline;") #{upload.subcategory}
         if upload.rating
-            if upload.rating == 'allAges'
+            if upload.rating === 'allAges'
                 p.upload-title-text.views-text(style="display:inline") SFW
-            if upload.rating == 'mature'
+            if upload.rating === 'mature'
                 p.upload-title-text.views-text(style="display:inline") NSFW
-            if upload.rating == 'sensitive'
+            if upload.rating === 'sensitive'
                 p.upload-title-text.views-text(style="display:inline") Sensitive (18+)
 
         div.thing(style="margin-top:-33px;margin-left:44px;display:block")
              input.ratingChanged(style="display:block;z-index:99999;position:absolute;" type="checkbox" value=`${upload._id}`)
 //
 //// denote whether upload is deleted
-if user && (user.role == 'admin' || user.role == 'moderator') && upload.visibility == 'removed'
+if user && (user.role === 'admin' || user.role === 'moderator') && upload.visibility === 'removed'
     div
         h4(style="margin-top:-5px;margin-bottom:-1px;") DELETED
         //p(style="font-size:15px") #{upload.uploader.channelName || upload.uploader.channelUrl}
