--- a/views/viewPartials/uploadThumbnail.pug
+++ b/views/viewPartials/uploadThumbnail.pug
@@ -13,33 +13,35 @@ style.
 div.holder(style="border:")
     // if there is no requestPath, it means it is the popular/recent pages
     a.title-anchor(href=`${upload.pathToUploader}/${upload.uniqueTag}` style="color:#7d7373;" )
-        div.image-container(style="")
+        div.image-container(style="position:relative;")
+            include ../viewPartials/fileDuration
+
             if upload.thumbnails && upload.thumbnails.custom
                 img.upload-thumbnail.preview-image(src=`${uploadServer}/${channelUrl || upload.uploader.channelUrl}/${upload.thumbnails.custom}` style="")
                 if upload.lastWatchedTime
                     progress(value=upload.lastWatchedTime max=upload.durationInSeconds)
 
-            else if upload.fileType == 'video' && upload.thumbnails && upload.thumbnails.generated
+            else if upload.fileType === 'video' && upload.thumbnails && upload.thumbnails.generated
                 img.upload-thumbnail.preview-image(src=`${uploadServer}/${channelUrl || upload.uploader.channelUrl}/${upload.thumbnails.generated}` style="")
                 if upload.lastWatchedTime
                     progress(value=upload.lastWatchedTime max=upload.durationInSeconds)
 
-            else if upload.fileType == 'video' && upload.thumbnails && upload.thumbnails.medium
+            else if upload.fileType === 'video' && upload.thumbnails && upload.thumbnails.medium
                 img.upload-thumbnail.preview-image(src=`${uploadServer}/${channelUrl || upload.uploader.channelUrl}/${upload.thumbnails.medium}` style="")
                 if upload.lastWatchedTime
                     progress(value=upload.lastWatchedTime max=upload.durationInSeconds)
 
-            else if upload.fileType == 'video' && !upload.thumbnailUrl
+            else if upload.fileType === 'video' && !upload.thumbnailUrl
                 img.upload-thumbnail.preview-image(src="/images/no_img.png")
                 if upload.lastWatchedTime
                     progress(value=upload.lastWatchedTime max=upload.durationInSeconds)
 
-            else if upload.fileType == 'image'
+            else if upload.fileType === 'image'
                 // TODO: have to fix this
                 img.upload-thumbnail.preview-image(src=`${uploadServer}/${channelUrl || upload.uploader.channelUrl}/${upload.uniqueTag}${upload.fileExtension}` style="")
 
-            else if upload.fileType == 'audio'
+            else if upload.fileType === 'audio'
                 img.upload-thumbnail.preview-image(src='/images/headphone.png')
 
-            else if upload.fileType == 'unknown'
+            else if upload.fileType === 'unknown'
                 img.upload-thumbnail.preview-image(src='/images/no_img.png')
