--- a/views/viewPartials/fileDuration.pug
+++ b/views/viewPartials/fileDuration.pug
@@ -16,6 +16,12 @@ style.
         padding: 3px 8px;
     }
 
+    .underThing:hover {
+        transform: scale(1) !important;
+
+        -webkit-filter: brightness(100%) !important;
+    }
+
     .underThing > i {
         color: #c8c8c8;
     }
