--- a/views/mediaBrowsing/popularUploads.pug
+++ b/views/mediaBrowsing/popularUploads.pug
@@ -66,8 +66,10 @@ block content
 
 
     if uploads
+        div.col-sm-12(style="display:inline;text-align:center;")
+            include ../viewPartials/pagination
 
-        include ../viewPartials/popularUploadsPagination
+
 
 
 
