--- a/views/viewPartials/adminSensitivityButtons.pug
+++ b/views/viewPartials/adminSensitivityButtons.pug
@@ -1,8 +1,8 @@
 // buttons on the bottom of the page to adjust visibility/maturity/category
 
-if user && user.role == 'admin'
+if user && user.role === 'admin'
     // TODO: need to add visibility
-    div.center-block.text-center(style="margin-top:30px")
+    div.center-block.text-center.col-sm-12(style="margin-top:30px")
         h4 Change Rating
         button.btn-lg.button-success.change-rating(rating="sensitive") Mark As Sensitive
         button.btn-lg.button-success.change-rating(rating="mature") Mark As NSFW (Mature)
